--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,38 @@
-a {display: block;}
+a {/* Anchor to appear as block */
+    display:  block;
+}
+
 td {text-align: center;}
-table {border: 2px dashed black;}
+
+table {/* To change appearance of table */ 
+    border: 2px dashed black;}
+
 p {font-family: Verdana, Geneva, Tahoma, sans-serif}
 #table {background-color: beige;
 color: blue;}
-#lists {
+
+.lists {
     color: beige;
-    font-size: 14px;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 body {background-color: skyblue;}
+
 h3 {font-size: 24px;
 color: blue;}
+
 img {display: block;
 margin-left: auto;
 margin-right: auto;
 border: 2px solid white;
 border-radius: 24px;}
+
 a {color: red;}
-a:hover {color: blue;}
+
+a:hover {/* anchor will appear as blue with interaction */
+    color: blue;}
+
+h1 {text-align: center;
+    color: beige;
+    font-size: 40px;
+}
