--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ color: blue;}
 img {display: block;
 margin-left: auto;
 margin-right: auto;
-border: 2px solid white;
+border: 4px solid blue;
 border-radius: 24px;}
 
 a {color: red;}
